<resources>
    <string name="app_name">OneShot</string>
    <string name="button_screen_shot">试一下</string>
    <string name="target_sdk_must_greater_than_lollipop">Android 5.0 以下手机暂时无法使用该功能</string>
    <string name="button_take_screen_shot">截图</string>
    <string name="tile_description">截图</string>
    <string name="menu_redo">重做</string>
    <string name="menu_undo">撤销</string>
    <string name="menu_save">保存</string>
    <string name="title_show_on_notification_center">在通知栏显示</string>
    <string name="content_show_on_notification_center">通知栏下拉菜单添加截屏入口</string>
    <string name="preference_file_name">OneShot</string>
    <string name="snack_share_image">分享图片</string>
    <string name="snack_action_send">分享</string>
    <string name="menu_share">分享</string>
    <string name="dialog_save_bitmap">保存图片…</string>
    <string name="toast_alipay_client_not_found">你倒是先装个支付宝啊</string>
    <string name="dialog_pay_title">尊敬的壕：</string>
    <string name="dialog_button_wechat">微信</string>
    <string name="dialog_button_alibaba">支付宝</string>
    <string name="dialog_pay_message">来都来了，不打赏一点么~</string>
    <string name="dialog_button_goodbye">我偏不</string>
    <string name="toast_byebye">(ｏ￣∇￣)＝◯)`ν゜)･；\n[手动再见]</string>
    <string name="content_pay_desc">来来来…快点一下</string>
    <string name="title_pay">打赏作者</string>
    <string name="toast_share_to_wechat">分享到自己的微信号，直接识别二维码</string>
    <!--<string name="tile_description">截图快捷方式</string>-->
</resources>
