<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/undo"
        android:title="@string/menu_undo"
        tools:ignore="AlwaysShowAction,AppCompatResource">
    </item>

    <item
        android:id="@+id/redo"
        android:title="@string/menu_redo"
        tools:ignore="AppCompatResource">
    </item>

    <item
        android:id="@+id/share"
        android:title="@string/menu_share"
        app:showAsAction="always"
        tools:ignore="AppCompatResource">
    </item>

    <item
        android:id="@+id/save"
        android:title="@string/menu_save"
        app:showAsAction="always"
        tools:ignore="AppCompatResource">
    </item>

</menu>