<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.next.oneshot.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/switch_notification_center"
            android:text="@string/title_show_on_notification_center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@+id/switch_notification_center"
            android:text="@string/content_show_on_notification_center"
            android:textColor="@color/colorAccent"
            android:textSize="13sp"/>

        <Switch
            android:id="@+id/switch_notification_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="#dedede"/>

    <Button
        android:id="@+id/bt_screen_shot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_screen_shot"/>

</LinearLayout>
